# Job_Search_MultiAgent

./: .env  .env.example  README.md  app.py  dockerfile  main.py  pyproject.toml  server.py  start.sh  test_crew.py
agents/: cover_letter_writer.py  job_analyzer.py  outreach_specialist.py  resume_customizer.py
api/routes/: applications.py  jobs.py
models/: schemas.py
outputs/20260527_155259/: cover_letter.txt  job_analysis.txt  linkedin_outreach.txt  resume.txt
outputs/20260527_172116/: cover_letter.txt  job_analysis.txt  linkedin_outreach.txt  resume.txt
outputs/20260527_173100/: cover_letter.txt  job_analysis.txt  linkedin_outreach.txt  resume.txt
tasks/: job_tasks.py
