[project]
name = "job-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
